@startuml

package eth {
    class EthConnector
    class StatefulContract

    EthConnector <|-- StatefulContract
}

package ipfs {
    class IPFSConnector
}

package stdlib #lightgrey {
    class Thread
}

package patterns {
    class StateMachine
    class Singleton

    StateMachine <|-left- StatefulContract
}

package node {
    class NodeActions
    class WorkerNode

    StatefulContract <|-- NodeActions
    NodeActions <|-- WorkerNode
}

package job {
    class JobGetters
    class CognitiveJob

    StatefulContract <|-- JobGetters
    JobGetters <|-- CognitiveJob
}

package entities {
    class Entity
    class Kernel
    class Dataset
    EthConnector <|-- Entity
    Entity <|-- Kernel
    Entity <|-- Dataset
    IPFSConnector o-down- Entity
}

package processor {
    class Processor
    Thread <|-up- Processor
    Kernel o-- Processor
    Dataset o-- Processor
}

package webapi {
    class WebAPIServer
    Thread <|-up- WebAPIServer
}

class Broker
Singleton <|-- Broker
Broker *--o WorkerNode
Broker *--o WebAPIServer
Broker *--o "∞" CognitiveJob
Broker *--o "∞" Processor

@enduml